--- a/style sheet/index.css
+++ b/style sheet/index.css
@@ -1,1 +1,297 @@
  
+ #container{
+    width:100%;
+    height :60px;
+     /* border:1px solid red ; */
+    justify-content: space-between;
+    display:flex;
+    background-color:rgba(250, 249, 249, 0.897);
+     
+}
+#container>div{
+    display: flex;
+    justify-content: space-around;
+    padding: 20px;
+   
+
+}
+
+h1{
+    font-size:40px;
+    text-align: center;
+  
+}
+ .p2{
+    width:50%;
+} 
+#container1{
+width:70%;
+height:70%;
+display: flex;
+/* border:1px solid red; */
+
+margin: auto;
+justify-content: space-around;
+}
+#container1>p{
+    display: flex;
+    justify-content: space-around;
+     gap:10px;
+    font-size: 15px;;
+    
+}
+#container3{
+    /* border:1px solid red;
+     /* width:100%;
+    height:400px; */  
+    margin:auto;
+}
+#container3>div>img{
+    width:100%;
+    margin:auto;
+
+}
+
+ #z1{
+     display: flex;
+     justify-content: space-between;
+     margin: 30px;
+     
+
+ }   
+
+
+#container4{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    grid-template-rows: repeat(1,450px);
+    /* gap:10px; */
+    margin: auto;
+    /* border:1px solid red; */
+    width:80%;
+  
+    
+}
+#container4>div{
+    width:97%;
+    height:300px;
+    /* border:1px solid red; */
+    margin: auto;
+    margin-top:20px;
+    
+}
+#container4>div>img{
+    width:100%;  
+}
+/* h1{
+     padding-left:200px;
+} */
+u{
+    text-align: center;
+    /* margin-top: 20px;; */
+    font-size: 14px;;
+   padding-left: 30px;
+}
+h1{
+    text-align: center;
+}
+#container5{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    grid-template-rows: repeat(1,400px);
+    margin: auto;
+    /* border:1px solid red; */
+    width:95%;
+    
+}
+#container5>div{
+    width:98%;
+    height:300px;
+    margin: auto;
+    /* border:1px solid red; */
+  
+}
+#container5>div>img{
+    width:100%;
+  
+}
+#container6{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: repeat(1,350px);
+    /* border:1px solid red; */
+    width:100%;
+}
+#container6>div{
+    /* border:1px solid red; */
+     width:100%;
+    height:290px;
+}
+#container6>div>img{
+    width:100%;
+
+}
+#container7{
+    display:grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(1fr,600px);
+    width:80%;
+    /* border:1px solid red; */
+    margin:auto;
+
+}
+#container7>div{
+    width:90%;
+    height:500px;
+    /* border:1px solid red; */
+
+}
+#container7>div>img{
+    width:100%;
+   
+
+}
+#container8{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    grid-template-rows: repeat(1,500px);
+    /* gap:10px; */
+    margin: auto;
+     /* border:1px solid red;  */
+    width:80%;
+  
+    
+}
+#container8>div{
+    width:97%;
+    height:300px;
+     /* border:1px solid red;  */
+    margin: auto;
+    margin-top:20px;
+    
+}
+#container8>div>img{
+    width:100%;  
+}
+#look{
+    display: flex;
+    justify-content: space-around;
+     
+
+}
+#container9{
+    display:grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(1,570px);
+    width:90%;
+    margin: auto;
+    /* border:1px solid red  */
+
+}
+#container9>div{
+    width:100%;
+    height:400px;
+    margin: auto;
+    /* margin-top: 30px;;
+    margin-left: 30px;;
+     */
+    /* border:1px solid red;  */
+
+}
+#container9>div>img{
+    width:100%;
+}
+#d1{
+    display: flex;
+    justify-content: space-around;
+}
+#container10{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    grid-template-rows: repeat(1,500px);
+    /* gap:10px; */
+    margin: auto;
+     /* border:1px solid red; */
+    width:80%;
+  
+    
+}
+#container10>div{
+    width:97%;
+    height:300px;
+      /* border:1px solid red;  */
+    margin: auto;
+    margin-top:20px;
+    
+}
+#container10>div>img{
+    width:100%;  
+}
+#container11{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    grid-template-rows: repeat(1,500px);
+    /* gap:10px; */
+    margin: auto;
+     /* border:1px solid red; */
+    width:80%;
+  
+    
+}
+#container11>div{
+    width:97%;
+    height:300px;
+      /* border:1px solid red;  */
+    margin: auto;
+    margin-top:20px;
+    
+}
+#container11>div>img{
+    width:100%;  
+}
+#container12{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    grid-template-rows: repeat(1,250px);
+    /* gap:20px; */
+    margin: auto;
+    width:90%;
+    /* border:1px solid #ff0000; */
+
+}
+#container12>div{
+    /* border:1px solid red; */
+    width:90%;
+    height:80%;
+   
+}
+h4{
+    text-align: center;
+    margin-right:60px;;
+}
+#container13{
+    width:60%;
+    height :60px;
+     /* border:1px solid red ; */
+    margin: auto;
+     
+}
+
+ #navbar {
+display: flex;
+gap:20px;
+}
+
+a {
+text-decoration: none;
+}
+#navbar a:hover {
+color: red;
+}
+#navbar a {
+cursor: pointer;
+}
+p{
+  text-align: center;
+}
+
